# astraeus

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  getting-started.md  index.md  roadmap.md  system-fields.md
docs/api/: cms.md  endpoints.md  exceptions.md  fields.md  testing.md
docs/decisions/: 001-uv-workspace-monorepo.md  002-headless-first-no-builtin-ui.md  003-extension-route-mechanism.md  004-prosemirror-bridge-in-cms.md  005-mcp-as-http-client-layer.md  006-webhooks-for-build-triggers.md  007-content-addressed-storage-keys.md  008-two-form-block-decorator.md  009-singleton-documents.md  010-document-references.md  011-obstore-for-mediakit-storage.md  012-multi-author-identity-and-permissions.md  013-field-level-access-control.md  014-machine-written-audit-records.md  015-starlette-cms-gateways.md  016-absent-vs-null-field-semantics.md  017-structured-logging-and-telemetry.md  gateways-interview-2026-06.md
docs/epics/: EPIC-001-vpp-mvp.md  EPIC-002-gateways-v1.md  ORCHESTRATION-PLAN.md  VPP-INTEGRATION-HANDOFF.md
docs/epics/stories/: STORY-001-field-types.md  STORY-002-singleton-documents.md  STORY-003-immutable-fields.md  STORY-004-document-references.md  (+2 more)
docs/guides/: document-references.md  field-types.md  filtering.md  media.md  migrations.md  singletons.md  testing.md  webhooks.md
docs/use-cases/: personal-site-joellithgow.md  vpp-eval-dataset.md  vpp-prompt-versioning.md  vpp-rule-governance.md  vpp-test-case-library.md  vpp-underwriting-intake.md
examples/demo/: app.py  pyproject.toml
