[project]
name = "astraeus-demo"
version = "0.1.0"
description = "Minimal Astraeus demo"
requires-python = ">=3.12"
dependencies = [
    "starlette-cms",
    "starlette-editor",
    "mediakit[admin]",
    "uvicorn>=0.30",
]

[tool.uv.sources]
starlette-cms = { workspace = true }
starlette-editor = { workspace = true }
mediakit = { workspace = true }
